--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "~1.0.1",
     "body-parser": "~1.0.0",
     "debug": "~0.7.4",
+    "twilio": "1.6.*",
     "jade": "~1.3.0"
   }
 }
