--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "dotenv": "0.4.*",
     "express": "~4.0.0",
     "static-favicon": "~1.0.0",
     "morgan": "~1.0.0",
     "cookie-parser": "~1.0.1",
     "body-parser": "~1.0.0",
     "debug": "~0.7.4",
+    "stylus": "0.48.*",
     "twilio": "1.6.*",
-    "jade": "~1.3.0"
+    "jade": "~1.3.0",
+    "nib": "~1.0.3"
   }
 }
